--- a/index.html
+++ b/index.html
@@ -8,130 +8,83 @@
 <script>
   const skapi = new Skapi("ap220VneiKiyIzgLeFEc", "f8e16604-69e4-451c-9d90-4410f801c006");
 </script>
-
 <br>
 <br>
-
-broadway Inc.
-
+<small>broadway Inc.</small>
 <article>
-
-  <h1>Complexity of Modern Web Development</h1>
-
+  <h2>Complexity of Web Development</h2>
   <p>
-    Web development was once straightforward: code a server, deploy it, and let it interact directly with users.
-    The code, data, and files were all in one place.
-
+    Building a website used to be straightforward.
     <br>
     <br>
-
+    You build a server, deploy it, and let it serve HTML content to users.
+    Everything—code, data, and files—was kept in one place, making management and operations simple.
+    <br>
+    <br>
     However, the landscape has drastically changed.
     <br>
     <br>
-
-    The advent of cloud computing, no-code/low-code solutions, and a
-    variety of frameworks was meant to streamline development.
-    
+    The introduction of cloud computing, the rise of no-code/low-code platforms, and a variety of frameworks were all
+    promised to simplify development.
     <br>
     <br>
-
-    Ironically, this evolution introduced more complexity.
-    Developers are now faced with navigating through multiple frameworks, dealing with complex server configurations,
-    and often requiring expert intervention during deployment.
-
+    Ironically, this evolution introduced more complexity. Developers are now faced with navigating through multiple
+    frameworks, dealing with complex server configurations, and often requiring expert intervention during deployment.
     <br>
     <br>
-
-    At Broadway Inc., we've envisioned a different approach – one that simplifies solutions in modern web development
+    At Broadway Inc., we've envisioned a different approach—one that simplifies backend web development solutions
     without compromising capabilities.
-  </p>
-  <br>
-  <h2>
-    Back to Basics with HTML
-  </h2>
-  <p>
-    Websites work best when they're built with static HTML. Nowadays, lots of cloud services let you host your HTML,
-    and
-    modern browsers are great at running complex JavaScript code.
-    <br>
-    <br>
-    Hence, it seems we don't really need servers to render HTML anymore.
-    We are living in an age where we have tons of SPA frameworks to do that, yet we still see a lot flocking back to
-    SSR using SPA frameworks, making it no different than PHP.
-    <br>
-    <br>
-    This trend persists mainly because, despite significant advancements on the frontend, the approach to structuring
-    backend servers hasn't changed much.
-    <br>
-    <br>
-    We want to change that.
-    <br>
-    <br>
-    By reimagining how backend servers are constructed, we seek to simplify the process of web development,
-    even for those based on static HTML.
   </p>
 
   <h4>
-    Embracing Serverless Technologies
+    The Serverless Integration
   </h4>
 
   <p>
-    We distilled backend servers only to their essence: serving user requests securely and efficiently.
-    By harnessing serverless technologies, we can do this while eliminating the need for conventional server
-    management.
+    We distilled backend servers only to their core function: securely and efficiently serving user requests.
+    By harnessing serverless technologies, we achieve this while eliminating the need for conventional server
+    management and leaving the computation to the client, while HTML is served from static cloud storage solutions.
   </p>
 
   <h4>
-    Leveraging Existing Cloud Services
+    No More Server Configuration
   </h4>
 
   <p>
     Many cloud services have already solved numerous problems in modern web development.
     The real challenge was integrating these services into a usable server.
-    <br>
-    <br>
     We've streamlined this process by interconnecting these services using serverless lambda functions,
     freeing developers from the complexities of cloud service configurations.
   </p>
 
   <h4>
-    Redefining the Database
+    No More Database Schemas
   </h4>
 
   <p>
-    Traditional databases often come with complex designs, strict security measures, and detailed indexing strategies.
-    <br>
-    <br>
-    We're changing this paradigm by introducing a user-centric database model.
-    <br>
-    <br>
-    Based on key-value stores and advanced techniques using lexicographical sorting, we've made it possible for users
-    to
-    determine their data structures, security levels, and indexing of their data.
-    <br>
-    <br>
     We believe the user is the owner of their data, and should be the
-    one to decide how their data should be stored and accessed. This shift removes the prerequisite of designing
-    database
+    one to decide how their data should be stored and accessed.
+    By introducing this user-centric database model, it removes the prerequisite of designing database
     schemas from the backend, also assuring security and flexibility with high performance.
   </p>
 
   <br>
 
-  <h2>Introducing Skapi: Backend API Library for Frontend HTML</h2>
+  <h2>Introducing Skapi: Your Silver Bullet for Full Stack Web Development</h2>
 
   <p>
-    In alignment with our vision, we have developed Skapi, a frontend JavaScript library that connects you to our
-    robust
-    serverless API solutions. Skapi empowers you to create full-stack web applications directly within your HTML
-    environment.
+    Aligned with our vision, we proudly introduce you to Skapi, a frontend JavaScript library that connects you to our
+    robust serverless API solutions.
+    Enabling you to build full-stack web applications directly within your HTML environment without the need for a
+    backend server.
     <br>
     <br>
     Say goodbye to the complexities of configuration, database design, and server deployment.
     Skapi streamlines your development, letting you focus solely on building.
     <br>
     <br>
-    Skapi comes packed with a comprehensive array of features, including user security, CDN, databases, email servers,
+    Skapi comes packed with a comprehensive array of features, including user security, CDN, databases, automated
+    emails,
     file storage, real-time data, and much more – all integrated seamlessly and accessible directly from your
     frontend.
     <br>
@@ -140,25 +93,26 @@ broadway Inc.
     the
     only tools required to develop a sophisticated and robust web service.
   </p>
+
   <p>
     Discover Skapi at <a href="https://www.skapi.com" target="_blank">www.skapi.com</a>.
   </p>
+
   <br>
+
   <p>
     Founder: Baksa Gimm
     <br>
     Find me on <a href="https://twitter.com/baksagimm" target="_blank">X</a> | <a
       href="https://www.linkedin.com/in/baksa-gimm-94122877/" target="_blank">LinkedIn</a> | <a
       href="https://www.instagram.com/baksagimm" target="_blank">Instagram</a>
-    <br>
   </p>
-  <br>
 </article>
 
 <hr>
 
 <section>
-  <h2>Subscribe to our Newsletter</h2>
+  <h3>Subscribe to our Newsletter</h3>
   <p>
     Be the first to know about our new services, updates, and special offers.
   </p>
@@ -166,21 +120,27 @@ broadway Inc.
     <input hidden name="redirect" value="/ns-subscribed.html" />
     <input hidden name="group" value="public" />
 
-    <span class="input-field">
-      <input type="email" name="email" placeholder='your@email.com' required /><span class="embed right">
-        <input class='button' type="submit" value="Subscribe" />
-      </span>
-      <span class="styler"></span>
-    </span>
+    <span class="input-field"><input type="email" name="email" placeholder='your@email.com' required /><span
+        class="embed right"><input class='button' type="submit" value="Subscribe" /></span><span
+        class="styler"></span></span>
   </form>
 </section>
 
-<br>
 <br>
 
 <footer>
   broadway Inc. Location: 101-3302, 109 Mapo-daero, Mapo-gu, Seoul, 04146, Republic of Korea
 </footer>
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
 <style>
   body {
     display: block;
@@ -202,7 +162,8 @@ broadway Inc.
 
   /* input styling */
   .input-field {
-    --max-height: calc(40px - 2px);
+    line-height: 0;
+    /* --max-height: calc(40px - 2px); */
     display: inline-block;
     background-color: white;
     position: relative !important;
@@ -216,7 +177,7 @@ broadway Inc.
   }
 
   .input-field>.embed {
-    height: var(--max-height);
+    /* height: var(--max-height); */
     display: inline-flex;
     padding: 4px;
   }
@@ -237,7 +198,7 @@ broadway Inc.
   }
 
   .input-field>input:not([type="checkbox"]):not([type="radio"]):not([type="file"]):not([type="submit"]):not([type="reset"]):not([type="button"]) {
-    height: var(--max-height);
+    /* height: var(--max-height); */
     padding: 0 2px 0 16px;
     font-size: 16px;
     border: none;
