landing page fix

--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
   const skapi = new Skapi("ap220VneiKiyIzgLeFEc", "f8e16604-69e4-451c-9d90-4410f801c006");
 </script>
 <br>
-<br>
 <small>broadway Inc.</small>
 <article>
-  <h2>Complexity of Web Development</h2>
+  <h2>Complexity of Modern Web Development</h2>
   <p>
     Building a website used to be straightforward.
     <br>
@@ -32,7 +31,7 @@
     frameworks, dealing with complex server configurations, and often requiring expert intervention during deployment.
     <br>
     <br>
-    At Broadway Inc., we've envisioned a different approach—one that simplifies backend web development solutions
+    We've envision a different approach—one that simplifies backend web development solutions
     without compromising capabilities.
   </p>
 
@@ -42,8 +41,10 @@
 
   <p>
     We distilled backend servers only to their core function: securely and efficiently serving user requests.
+    <br>
+    <br>
     By harnessing serverless technologies, we achieve this while eliminating the need for conventional server
-    management and leaving the computation to the client, while HTML is served from static cloud storage solutions.
+    management and leaving the computation to the client.
   </p>
 
   <h4>
@@ -53,7 +54,9 @@
   <p>
     Many cloud services have already solved numerous problems in modern web development.
     The real challenge was integrating these services into a usable server.
-    We've streamlined this process by interconnecting these services using serverless lambda functions,
+    <br>
+    <br>
+    We've streamlined this process by interconnecting these services using serverless functions,
     freeing developers from the complexities of cloud service configurations.
   </p>
 
@@ -64,6 +67,8 @@
   <p>
     We believe the user is the owner of their data, and should be the
     one to decide how their data should be stored and accessed.
+    <br>
+    <br>
     By introducing this user-centric database model, it removes the prerequisite of designing database
     schemas from the backend, also assuring security and flexibility with high performance.
   </p>
@@ -96,18 +101,10 @@
 
   <p>
     Discover Skapi at <a href="https://www.skapi.com" target="_blank">www.skapi.com</a>.
-  </p>
-
-  <br>
-
-  <p>
-    Founder: Baksa Gimm
-    <br>
-    Find me on <a href="https://twitter.com/baksagimm" target="_blank">X</a> | <a
-      href="https://www.linkedin.com/in/baksa-gimm-94122877/" target="_blank">LinkedIn</a> | <a
-      href="https://www.instagram.com/baksagimm" target="_blank">Instagram</a>
-  </p>
+  </p>  
 </article>
+
+<br>
 
 <hr>
 
@@ -127,9 +124,10 @@
 </section>
 
 <br>
+<br>
 
 <footer>
-  broadway Inc. Location: 101-3302, 109 Mapo-daero, Mapo-gu, Seoul, 04146, Republic of Korea
+  <small>broadway Inc. 101-3302, 109 Mapo-daero, Mapo-gu, Seoul, 04146, Republic of Korea</small>
 </footer>
 
 <br>
