--- a/admin/index.html
+++ b/admin/index.html
@@ -32,6 +32,9 @@
         <li>
             <a href="/pp/skapi.html">Skapi Privacy Policy</a>
         </li>
+        <li>
+            <a href="/admin/html-sem.html">HTML Guides</a>
+        </li>
         <br>
         <li>
             <a href="/admin/change-password.html">Change Password</a>
