--- a/admin/sem/cardblocks2.html
+++ b/admin/sem/cardblocks2.html
@@ -43,9 +43,9 @@
     <section class="section1">
         <h1>Lets do a card block</h1>
         <article>
-            <h1>Card don't use text tags</h1>
+            <h1>Don't use text tags(&lt;h1&gt;, &lt;h2&gt;, &lt;p&gt;...) in design specific texts (Card title, buttons...) </h1>
             <p>
-                For UI and design purposed texts, use the plain texts.
+                For UI and design purposed texts, just use the plain text, or &lt;span&gt; tag if needed.
             </p>
         </article>
     </section>
@@ -58,9 +58,9 @@
                     This is the card title
                 </span>
                 <p>
-                    You can use paragraph for contexts.
+                    You can use &lt;p&gt; for contexts.
                     <br>
-                    You can use break tags for line breaks.
+                    You can use &lt;br&gt; for line breaks.
                 </p>
                 <button>Click</button>
             </div>
@@ -69,9 +69,9 @@
                     This is the card title
                 </span>
                 <p>
-                    You can use paragraph for contexts.
+                    You can use &lt;p&gt; for contexts.
                     <br>
-                    You can use break tags for line breaks.
+                    You can use &lt;br&gt; for line breaks.
                 </p>
                 <button>Click</button>
             </div>
@@ -80,34 +80,9 @@
                     This is the card title
                 </span>
                 <p>
-                    You can use paragraph for contexts.
+                    You can use &lt;p&gt; for contexts.
                     <br>
-                    You can use break tags for line breaks.
-                </p>
-                <button>Click</button>
-            </div>
-        </div>
-
-        <div class="card-set">
-            <div class="card">
-                <span class="card-title">
-                    This is the card title
-                </span>
-                <p>
-                    You can use paragraph for contexts.
-                    <br>
-                    You can use break tags for line breaks.
-                </p>
-                <button>Click</button>
-            </div>
-            <div class="card">
-                <span class="card-title">
-                    This is the card title
-                </span>
-                <p>
-                    You can use paragraph for contexts.
-                    <br>
-                    You can use break tags for line breaks.
+                    You can use &lt;br&gt; for line breaks.
                 </p>
                 <button>Click</button>
             </div>
@@ -119,9 +94,20 @@
                     This is the card title
                 </span>
                 <p>
-                    You can use paragraph for contexts.
+                    You can use &lt;p&gt; for contexts.
                     <br>
-                    You can use break tags for line breaks.
+                    You can use &lt;br&gt; for line breaks.
+                </p>
+                <button>Click</button>
+            </div>
+            <div class="card">
+                <span class="card-title">
+                    This is the card title
+                </span>
+                <p>
+                    You can use &lt;p&gt; for contexts.
+                    <br>
+                    You can use &lt;br&gt; for line breaks.
                 </p>
                 <button>Click</button>
             </div>
@@ -133,9 +119,23 @@
                     This is the card title
                 </span>
                 <p>
-                    You can use paragraph for contexts.
+                    You can use &lt;p&gt; for contexts.
                     <br>
-                    You can use break tags for line breaks.
+                    You can use &lt;br&gt; for line breaks.
+                </p>
+                <button>Click</button>
+            </div>
+        </div>
+
+        <div class="card-set">
+            <div class="card">
+                <span class="card-title">
+                    This is the card title
+                </span>
+                <p>
+                    You can use &lt;p&gt; for contexts.
+                    <br>
+                    You can use &lt;br&gt; for line breaks.
                 </p>
                 <button>Click</button>
             </div>
@@ -144,9 +144,9 @@
                     This is the card title
                 </span>
                 <p>
-                    You can use paragraph for contexts.
+                    You can use &lt;p&gt; for contexts.
                     <br>
-                    You can use break tags for line breaks.
+                    You can use &lt;br&gt; for line breaks.
                 </p>
                 <button>Click</button>
             </div>
@@ -155,9 +155,9 @@
                     This is the card title
                 </span>
                 <p>
-                    You can use paragraph for contexts.
+                    You can use &lt;p&gt; for contexts.
                     <br>
-                    You can use break tags for line breaks.
+                    You can use &lt;br&gt; for line breaks.
                 </p>
                 <button>Click</button>
             </div>
@@ -169,8 +169,6 @@
             padding: 10px;
             margin: 10px;
             border-radius: 5px;
-
-            /* max-width: 300px; */
             flex-grow: 1;
         }
 
