--- a/admin/sem/section4.html
+++ b/admin/sem/section4.html
@@ -48,7 +48,7 @@
 </style>
 <div id="middle">
     <section class="section">
-        <h1>Section 4 is flex</h1>
+        <h1>Section is flex</h1>
         <article>
             <h1>Article is a text content</h1>
             <p>
@@ -57,14 +57,21 @@
                 <br>
                 You may use various styled text tags to represent the content.
             </p>
-            <h1>When verically centering things...</h1>
+            <h1>When vertically centering things...</h1>
             <p>
                 You may use flexbox or tables to center things vertically.
                 <br>
                 <br>
                 Don't forget to calculate the height of the header.
             </p>
+            <h1>Also, consider NOT vertically centering things on page</h1>
+            <p>
+                1. It may not look good on mobile devices,
+                <br>
+                2. Actually, it may look/read better to use some margin on top.
+            </p>
         </article>
+        <a style='float:right' href="/admin/sem/cardblocks.html">Card Blocks</a>
     </section>
 </div>
 <script>
