--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>broadway Inc.</title>
 <script src="https://cdn.jsdelivr.net/npm/skapi-js@latest/dist/skapi.js"></script>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-init-css@latest/init.css">
 <link rel="stylesheet" href="style.css">
@@ -10,8 +11,9 @@
 </script>
 <br>
 <small>broadway Inc.</small>
+
 <article>
-  <h2>Complexity of Modern Web Development</h2>
+  <h1>Complexity of Modern Web Development</h1>
   <p>
     Building a website used to be straightforward.
     <br>
@@ -161,7 +163,6 @@
   /* input styling */
   .input-field {
     line-height: 0;
-    /* --max-height: calc(40px - 2px); */
     display: inline-block;
     background-color: white;
     position: relative !important;
@@ -175,7 +176,6 @@
   }
 
   .input-field>.embed {
-    /* height: var(--max-height); */
     display: inline-flex;
     padding: 4px;
   }
@@ -196,7 +196,6 @@
   }
 
   .input-field>input:not([type="checkbox"]):not([type="radio"]):not([type="file"]):not([type="submit"]):not([type="reset"]):not([type="button"]) {
-    /* height: var(--max-height); */
     padding: 0 2px 0 16px;
     font-size: 16px;
     border: none;
